test_suite/ERROR_keyword_as_id2.java
class Main {
    public static void main(String[] a) {
    }
}

class A {
    public int a(int a) {
        int boolean;
        return 1;
    }
}
